--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,15 @@ amqp==1.4.6
 anyjson==0.3.3
 billiard==3.3.0.19
 celery==3.1.17
+flake8==2.3.0
 flask-heroku==0.1.9
 gunicorn==19.1.1
 itsdangerous==0.24
 kombu==3.0.24
+mccabe==0.3
 mongoengine==0.8.7
+pep8==1.5.7
+pyflakes==0.8.1
 pymongo==2.7.2
 pytz==2014.10
 requests==2.5.1
