--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ itsdangerous==0.24
 kombu==3.0.24
 mccabe==0.3
 mongoengine==0.8.7
+newrelic==2.40.0.34
 pep8==1.5.7
 pyflakes==0.8.1
 pymongo==2.7.2
