--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ venv
 docs/
 .env
 node_modules/
+app/static/backbone-min.js
+app/static/bootstrap.min.css
+app/static/jquery-1.11.2.min.js
+app/static/underscore-min.js
